--- a/super-mariomon-frontend/index.html
+++ b/super-mariomon-frontend/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="./supermariomon-icon.JPG" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
+    <title>Super Mariomon</title>
   </head>
   <body>
     <div id="app"></div>
